--- a/index.html
+++ b/index.html
@@ -2,35 +2,18 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>デコレーションシステム</title>
+  <title>写真トリミング</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://unpkg.com/cropperjs/dist/cropper.css">
 </head>
 <body>
+  <h2>写真をアップロードしてトリミング</h2>
+  <input type="file" id="upload" accept="image/*">
+  <button id="rotateBtn">回転</button>
+  <button id="confirmBtn">確定</button>
+  <div id="cropArea"></div>
 
-<h2>写真にデコレーション！</h2>
-<input type="file" id="upload" accept="image/*">
-<button id="cropBtn">トリミング</button>
-<button id="undoBtn">戻る</button>
-<button id="deleteBtn">削除</button>
-<button id="saveBtn">保存</button>
-
-<canvas id="canvas"></canvas>
-
-<!-- カテゴリ切り替えタブ -->
-<div id="tabs">
-  <button onclick="showCategory('frames')">フレーム</button>
-  <button onclick="showCategory('stamps')">スタンプ</button>
-  <button onclick="showCategory('phrases')">フレーズ</button>
-</div>
-
-<!-- 各カテゴリのスクロールバー -->
-<div id="frames" class="category"></div>
-<div id="stamps" class="category"></div>
-<div id="phrases" class="category"></div>
-
-<script src="https://unpkg.com/cropperjs"></script>
-<link rel="stylesheet" href="https://unpkg.com/cropperjs/dist/cropper.css">
-<script src="script.js"></script>
+  <script src="https://unpkg.com/cropperjs"></script>
+  <script src="script.js"></script>
 </body>
 </html>
